--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,11 @@
       <artifactId>spring-boot-actuator</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.19</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>mysql</groupId>-->
+<!--      <artifactId>mysql-connector-java</artifactId>-->
+<!--      <version>8.0.19</version>-->
+<!--    </dependency>-->
 
     <!-- activemq -->
     <dependency>
@@ -112,7 +112,21 @@
           <artifactId>activemq-broker</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>    
+    </dependency>
+
+    <!-- Infinispan -->
+    <dependency>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-spring-boot-starter-embedded</artifactId>
+      <version>${version.infinispan.starter}</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>org.infinispan</groupId>-->
+<!--      <artifactId>infinispan-cachestore-jpa</artifactId>-->
+<!--      <version>${version.infinispan}</version>-->
+<!--    </dependency>-->
+
     <!-- Camel -->
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -146,10 +160,10 @@
 	  <groupId>org.apache.camel</groupId>
 	  <artifactId>camel-freemarker</artifactId>
 	</dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-jdbc</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.camel</groupId>-->
+<!--      <artifactId>camel-jdbc</artifactId>-->
+<!--    </dependency>-->
     <!-- test -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -172,7 +186,19 @@
 	        </exclusion>
 	      </exclusions>
 	    </dependency>
-    </dependencies>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
     <build>
     <testResources>
