--- a/settings/application.properties
+++ b/settings/application.properties
@@ -42,7 +42,14 @@ trace.event.queue=process-queue
 #   DB Configuration   #
 ########################
 
-traceDb.url=jdbc:mysql://localhost:3306/db
-traceDb.username=user
-traceDb.password=password
+#traceDb.url=jdbc:mysql://localhost:3306/db
+#traceDb.username=user
+#traceDb.password=password
 
+################################
+#   Infinispan Configuration   #
+################################
+
+clustering.jgroups-channel-name=InfinispanPoc
+infinispan.embedded.enabled=true
+infinispan.embedded.cluster-name=TestCluster
