--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,7 +9,7 @@ server.port=9000
 #########################################
 #Broker URL  UPDATE THIS FOR DEV/TEST   #
 #########################################
-spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://localhost:61617
 
 ###############################
 #Spring Boot  DO NOT CHANGE   #
@@ -43,3 +43,10 @@ trace.event.queue=process-queue
 traceDb.url=jdbc:mysql://localhost:3306/db
 traceDb.username=user
 traceDb.password=password
+
+################################
+#   Infinispan Configuration   #
+################################
+
+clustering.jgroups-channel-name=InfinispanPoc
+jpaconfig=classpath:META-INF/persistence.xml
