--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -40,13 +40,12 @@ trace.event.queue=process-queue
 #   DB Configuration   #
 ########################
 
-traceDb.url=jdbc:mysql://localhost:3306/db
-traceDb.username=user
-traceDb.password=password
+traceDb.url=jdbc:h2:mem:test
+traceDb.username=sa
+traceDb.password=
 
 ################################
 #   Infinispan Configuration   #
 ################################
 
 clustering.jgroups-channel-name=InfinispanPoc
-jpaconfig=classpath:META-INF/persistence.xml
