--- a/pom.xml
+++ b/pom.xml
@@ -193,11 +193,12 @@
       <version>1.4.200</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
 
+    <!-- uncomment if we add cache persistence -->
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.hibernate</groupId>
