--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
       <version>2.11.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.26</version>
+    </dependency>
 
     <!-- MYSQL -->
     <dependency>
